fix(TransqueryDetails): Overflow error
Fix overflow error with css tweaking

ref: CM-259

--- a/src/styles/specifics/accounting/__transquery.sass
+++ b/src/styles/specifics/accounting/__transquery.sass
@@ -12,11 +12,11 @@ transquery-details
     .transquery-filter-form
         position: absolute
         top: .4rem
-        left: 20rem
+        left: 21rem
         z-index: #{map-get($zindex, toolbar) - 2}
 
         uni-field
-            width: auto
+            width: 8.8rem
             padding: 0
             padding-right: 1.5rem
 
@@ -31,9 +31,10 @@ transquery-details
                     width: 9.375rem
 
             &:last-child
+                width: auto
                 label
                     span
-                        width: 7rem
+                        width: 6rem
 
         .collapsable.-is-open > .collapsable-content
             justify-content: left
